fixed some validation errors

--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
 					<blockquote id="aria-colindex">The <mark>aria-colindex</mark> attribute defines an element's column
 						index or
 						position with respect to the total number of columns within a <a
-							href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/table" ;>table</a>, <a
-							href="https://developer.mozilla.org/en-US/docs/Web/CSS/grid" ;>grid</a>, or <a
-							href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/treegrid_role" ;>treegrid.</a>
+							href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/table">table</a>, <a
+							href="https://developer.mozilla.org/en-US/docs/Web/CSS/grid">grid</a>, or <a
+							href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/treegrid_role">treegrid.</a>
 					</blockquote>
 				</section>
 				<section>
