Correct some W3C errors

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -134,7 +134,7 @@
 				<section id="aria-keyshortcuts-04" data-keyshortcuts="4">
 					<h2>Authors MUST ensure</h2>
 					<div class="gradient-border gradient-border-left">
-						<span class="gradient-border gradient-border-04">
+						<div class="gradient-border gradient-border-04">
 							<p class="specialunderline">Modifier keys come first when they are part of a keyboard
 								shortcut.</p>
 							<p>that required non-modifier keys come last when they are part of a shortcut.
@@ -148,7 +148,7 @@
 								<mark>Alt</mark> is not valid because it doesn't include at least one non-modifier
 								key.
 							</p>
-						</span>
+						</div>
 					</div>
 				</section>
 				<section id="aria-keyshortcuts-05" data-keyshortcuts="5">
