Correct some w3c errors

--- a/index.html
+++ b/index.html
@@ -443,12 +443,11 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 				<h4>description: The aria-checked</h4>
 				<p>The aria-checked attribute indicates the current "checked" state of checkboxes, radio buttons, and other
 					widgets.
-					Note: Where possible use an HTML<input>element with type="checkbox" and type="radio" as these have built in
+					Note: Where possible use an HTML &lt;input&gt; element with type="checkbox" and type="radio" as these have built in
 					semantics and do not require ARIA attributes.
 					The mixed value is not supported on radio, menuitemradio, or switch and elements that inherits from these. The
 					value will be false if mixed is set when not supported.
 				</p>
-				<span role="checkbox" id="checkBoxInput" aria-checked="false" tabindex="0" aria-labelledby="chk15-label"></span>
 				<p> <a href="https://blog.hubspot.com/website/html-input-types">Please have a look here for more information
 					</a>
 				</p>
