Correct some w3c errors

--- a/index.html
+++ b/index.html
@@ -347,11 +347,11 @@
 				</section>
 				<section>
 					<h4 class="aria-label-heading">How to use</h4>
-					<p3>You can make use of aria-label by adding it to certain HTML elements.
+					<p>You can make use of aria-label by adding it to certain HTML elements.
 						<br><img src="assets/aria-label-image2.png" alt="prism-code language html">
 						<br> VoiceOver on OSX will read this button as "menu, button", as shown in the image below.
 						<br><img src="assets/aria-label-image3.png" alt="prism-code language html">
-					</p3>
+					</p>
 				</section>
 				<section>
 					<h4 class="aria-label-heading">WHAT ELEMENTS CAN BE USED WITH ARIA-LABEL</h4>
@@ -605,7 +605,7 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 			<section>
 				<section>
 					<h2>aria-valuetext</h2>
-					<blockquote id="aria-colindex">The <mark>aria-valuetext</mark> attribute defines the human-readable text
+					<blockquote id="aria-colindex2">The <mark>aria-valuetext</mark> attribute defines the human-readable text
 						alternative of <a
 							href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-valuenow">aria-valuenow</a>
 						for a range widget. Numbers — even percentages — aren't always user-friendly. Assistive
