Correct some w3c errors

--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
 							the keyboards they intend to support to avoid unintended results.
 							Keyboard designs vary significantly based on the device used and the languages supported.
 						</p>
-						<h4>
-							<bold>For example, many modifier keys are used in conjunction with other keys to<span
-									area-hidden="true">:</span> </bold>
-						</h4>
+						<h3>
+							For example, many modifier keys are used in conjunction with other keys to<span
+									area-hidden="true">:</span>
+						</h3>
 						<ol role="list">
 							<li role="listitem"><span aria-label="one">1</span>create common punctuation symbols</li>
 							<li role="listitem"><span aria-label="two">2</span>create number characters</li>
@@ -223,7 +223,7 @@
 					<div class="gradient-border">
 						<h3 class="gradient-border gradient-border-08">For example, the single-quote character can be
 							encoded as
-							<div id="mixedcode">ampersand hash 39 semi-colon</div><a aria-labelledby="mixedcode"></a> in HTML.
+							<span id="mixedcode">ampersand hash 39 semi-colon</span><a aria-labelledby="mixedcode"></a> in HTML.
 						</h3>
 					</div>
 				</section>
@@ -231,7 +231,7 @@
 					<h2>Aria-keyshortcuts Rules</h2>
 					<div class="gradient-border">
 						<h3 class="gradient-border gradient-border-09">For example, the single-quote character can be
-							encoded as <div id="mixedcode2">ampersand hash 39 semi-colon</div><a aria-labelledby="amper"><mark
+							encoded as <span id="mixedcode2">ampersand hash 39 semi-colon</span><a aria-labelledby="amper"><mark
 									aria-hidden="true">&amp;#39;</mark></a> in HTML.
 						</h3>
 						<h4>User agents MUST NOT change keyboard behavior in response to the aria-keyshortcuts
@@ -267,7 +267,7 @@
 						<span>A</span>
 						<span>Shift + Space</span>
 						<span>Control + Alt + U + .</span>
-						<span>Control + Shift + <div id="mixedcode3">ampersand hash 39 semi-colon</div><a
+						<span>Control + Shift + <span id="mixedcode3">ampersand hash 39 semi-colon</span><a
 								aria-labelledby="amper"><mark aria-hidden="true">&amp;#39;</mark></a></span>
 						<span>Alt+Shift+P Control+F</span>
 						<span>Meta+C Meta+Shift+C</span>
