Correct some w3c warnings

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				<p> cohort 02, in<strong id="tech">TECH</strong>gration </p>
 			</section>
 			<section>
+				<div></div>
 				<section>
 					<h2>what is A11Y?</h2>
 					<p>A ccessibilit y </p>
@@ -50,6 +51,7 @@
 				</section>
 			</section>
 			<section>
+				<div></div>
 				<section>
 					<h2 class="main-heading">ARIA</h2>
 					<p>
@@ -64,6 +66,7 @@
 				</section>
 			</section>
 			<section id="aria-keyshortcuts" class="aria-keyshortcuts">
+				<div></div>
 				<section id="aria-keyshortcuts-01" data-state="aria-keyshortcuts">
 					<div id="ariakeystart">Aria-keyshortcuts start of presentation</div>
 					<h2 aria-labelledby="ariakeystart" aria-hidden="true">Aria-keyshortcuts</h2>
@@ -294,6 +297,7 @@
 				</section>
 			</section>
 			<section>
+				<div></div>
 				<section>
 					<h2>aria-colindex</h2>
 					<blockquote id="aria-colindex">The <mark>aria-colindex</mark> attribute defines an element's column
@@ -341,6 +345,7 @@
 				</section>
 			</section>
 			<section>
+				<div></div>
 				<section>
 					<h2 class="aria-label-heading">aria-label</h2>
 					<p>The <mark>aria-label</mark> should be used to provide a text alternative to an element that has
@@ -402,6 +407,7 @@
 				</section>
 			</section>
 			<section>
+				<div></div>
 				<section>
 					<h2>aria-details</h2>
 					<p><mark>Aria-details</mark> provides a set of information and data in a hierarchical and organized
@@ -605,6 +611,7 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 				</section>
 			</section>
 			<section>
+				<div></div>
 				<section>
 					<h2>aria-valuetext</h2>
 					<blockquote id="aria-colindex2">The <mark>aria-valuetext</mark> attribute defines the human-readable text
