Correct some w3c warnings

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 				</section>
 			</section>
 			<section>
+				<h2 class="fragment" aria-hidden="true">Nested sections</h2>
 				<section>
 					<h2 class="main-heading">ARIA</h2>
 					<p>
@@ -294,6 +295,7 @@
 				</section>
 			</section>
 			<section>
+				<h2 class="fragment" aria-hidden="true">Nested sections</h2>
 				<section>
 					<h2>aria-colindex</h2>
 					<blockquote id="aria-colindex">The <mark>aria-colindex</mark> attribute defines an element's column
@@ -341,6 +343,7 @@
 				</section>
 			</section>
 			<section>
+				<h2 class="fragment" aria-hidden="true">Nested sections</h2>
 				<section>
 					<h2 class="aria-label-heading">aria-label</h2>
 					<p>The <mark>aria-label</mark> should be used to provide a text alternative to an element that has
@@ -402,6 +405,7 @@
 				</section>
 			</section>
 			<section>
+				<h2 class="fragment" aria-hidden="true">Nested sections</h2>
 				<section>
 					<h2>aria-details</h2>
 					<p><mark>Aria-details</mark> provides a set of information and data in a hierarchical and organized
