--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 				</section>
 			</section>
 			<section id="aria-keyshortcuts" class="aria-keyshortcuts">
+				<h2 class="fragment" aria-hidden="true">Nested sections</h2>
 				<section id="aria-keyshortcuts-01" data-state="aria-keyshortcuts">
 					<div id="ariakeystart">Aria-keyshortcuts start of presentation</div>
 					<h2 aria-labelledby="ariakeystart" aria-hidden="true">Aria-keyshortcuts</h2>
