Correct br  w3c warnings

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
 					<div class="gradient-border gradient-border-left">
 						<p class="gradient-border gradient-border-02">It is a space-separated list of keyboard shortcuts
 							that can be
-							pressed to activate a command or textbox widget.<br /><br />
+							pressed to activate a command or textbox widget.<br><br>
 							The keys defined in the shortcuts represent the physical keys pressed and not the actual
 							characters
-							generated.<br /><br />
+							generated.<br><br>
 							Each keyboard shortcut consists of one or more tokens delimited by <mark>the plus sign
 								<span aria-hidden="true">("+")</span></mark>
 							representing zero or more modifier keys and exactly one non-modifier key that must be
@@ -116,7 +116,7 @@
 					</h2>
 					<div class="gradient-border gradient-border-left">
 						<div class="gradient-border gradient-border-03">For example,
-							<mark>Alt, Control, Shift, Meta, or AltGraph.</mark><br />
+							<mark>Alt, Control, Shift, Meta, or AltGraph.</mark><br>
 							On Apple computers, meta corresponds to the Command key, and Alt to the Option key.
 							The valid names for non-modifier keys are any printable character.
 							<mark>A, B, 1, 2, <span aria-label="dollar">$</span>, Plus</mark> for a plus sign,"Space" for the
