updated css/html file Anna's section

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 					</pre>
 
 				</section>
-				<section>
+				<section id="aria-label-margin">
 					<h4 class="aria-label-heading">How to use</h4>
 					<p>You can make use of aria-label by adding it to certain HTML elements.
 					<div class="aria-label-div">
@@ -421,7 +421,6 @@
 					<p>You should use it when you have non-textual indication of an element's purpose, but still need to
 						provide text alternates for users who use assistive technology,
 						such as screen readers.</p>
-					<br>
 					<p><span class="aria-label-highlighted">TIP:LABELLING BEST PRACTICE</span>
 						<br>You don't need to add "button" in the label as screen readers already announce an element's
 						role.
