--- a/index.html
+++ b/index.html
@@ -743,7 +743,29 @@ alt="​​Les Demoiselles dAvignon" aria-details="det">
 				</section>
 				<section>
 					<h2 class="visibility-hidden" aria-hidden="true">Hidden header</h2>
-					<br><img src="assets/aria-valuenow.png" alt="">
+					<h3>Example:</h3>
+					<pre>
+					<code id="htmlCode" class="language-html">
+					  &lt;p id="birthyearLabel" &gt;What year were you born?&lt;/p&gt;
+						&lt;div
+						role="spinbutton"
+						tabindex="-1"
+						aria-valuenow="1984"
+						aria-valuemin="1900"
+						aria-valuemax="2021"
+						aria-labelledby="birthyearLabel"&gt;
+						  &lt;span class="value"&gt;1984&lt;/span&gt;
+						  &lt;span role="button"&gt;
+						  &lt;span aria-hidden="true"&gt;+&lt;/span&gt;
+						  Increment year by 1
+						  &lt;/span&gt;
+						  &lt;span role="button"&gt;
+						  &lt;span aria-hidden="true"&gt;-&lt;/span&gt;
+						  Decrement year by 1
+						  &lt;/span&gt;
+						  &lt;/div&gt;
+						</code>
+				</pre>
 				</section>
 				<section>
 					<h2 class="visibility-hidden" aria-hidden="true">Hidden header</h2>
